[package]
name = "bom_matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version="0.12.23", features = ["json"]}
serde_json = "1.0.143"
tokio = { version="1.47.1", features = ["full"]}
threadpool = "1.8.1"
futures = "0.3.31"
anyhow = "1.0.99"
